# check-speeds

./: CMakeLists.txt  matrices.cpp  tensors.cpp
